# skills-registry

./: README.md
skills/agent-autopilot/: SKILL.md
skills/agent-board/: SKILL.md
skills/agent-browser/: SKILL.md
skills/agent-fork/: SKILL.md
skills/agent-memory/: SKILL.md
skills/agent-reach/: SKILL.md
skills/agent-team-orchestration/: SKILL.md
skills/andrej-karpathy-skills/: SKILL.md
skills/auto-dream/: SKILL.md
skills/autonomous-loop/: SKILL.md
skills/baidu-ocr/: _meta.json
skills/buddy-companion/: SKILL.md
skills/capability-evolver/: SKILL.md
skills/caveman/: SKILL.md  _meta.json
skills/chuangzuoguan/: SKILL.md
skills/claude-code-launcher/: SKILL.md
skills/clawlist/: SKILL.md
skills/cloakbrowser/: SKILL.md
skills/cloud-handoff/: SKILL.md
skills/code-simplifier/: _meta.json
skills/cognitive-memory/: SKILL.md
skills/credential-manager/: SKILL.md
skills/customize-opencode/: SKILL.md
skills/ddg-search-privacy/: SKILL.md
skills/debug-pro/: SKILL.md
skills/debug-session/: SKILL.md
skills/deep-research-pro/: SKILL.md
skills/design-revise/: SKILL.md
skills/diagram-generator/: SKILL.md
skills/evo-benchmark/: SKILL.md
skills/evolver/: SKILL.md  _meta.json  package-lock.json  package.json
skills/evoskills/: SKILL.md
skills/find-skills/: SKILL.md
skills/frontend-design/: SKILL.md
skills/gbrain/: SKILL.md
skills/news-extractor/: .skillhub.json  SKILL.md  pyproject.toml  requirements.txt
skills/news-extractor/scripts/: extract_news.py  wechat.py
skills/news-extractor/scripts/crawlers/: __init__.py  base.py
(+445 files in other folders)
